DT-497 Most tests now fixed