@@ -7,19 +7,19 @@ import org.springframework.boot.info.BuildProperties;
 import org.springframework.context.ApplicationContext;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import springfox.documentation.builders.AuthorizationCodeGrantBuilder;
+import springfox.documentation.builders.OAuthBuilder;
+import springfox.documentation.builders.PathSelectors;
 import springfox.documentation.builders.RequestHandlerSelectors;
-import springfox.documentation.service.ApiInfo;
-import springfox.documentation.service.Contact;
+import springfox.documentation.service.*;
 import springfox.documentation.spi.DocumentationType;
+import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
 import java.time.LocalDateTime;
 import java.time.ZonedDateTime;
-import java.util.Collections;
-import java.util.Date;
-import java.util.Optional;
-import java.util.Properties;
+import java.util.*;
 
 import static springfox.documentation.builders.PathSelectors.regex;
 
@@ -27,8 +27,8 @@ import static springfox.documentation.builders.PathSelectors.regex;
 @EnableSwagger2
 public class SwaggerConfig {
 
-    @Autowired
-    private ApplicationContext applicationContext;
+    @Autowired(required = false)
+    private BuildProperties buildProperties;
 
     @Bean
     public Docket nomisApi() {
@@ -47,27 +47,42 @@ public class SwaggerConfig {
         docket.directModelSubstitute(ZonedDateTime.class, Date.class);
         docket.directModelSubstitute(LocalDateTime.class, Date.class);
 
+
         return docket;
     }
 
-    private ApiInfo apiInfo() {
+    private SecurityScheme securityScheme() {
+        final var grantType = new AuthorizationCodeGrantBuilder()
+                .tokenEndpoint(new TokenEndpoint("http://localhost:9090/auth/oauth" + "/token", "oauthtoken"))
+                .tokenRequestEndpoint(
+                        new TokenRequestEndpoint("http://localhost:9090/auth/oauth" + "/authorize", "swagger-client", "clientsecret"))
+                .build();
 
-        BuildProperties buildProperties;
-        try {
-            buildProperties = (BuildProperties) applicationContext.getBean("buildProperties");
-        } catch (final BeansException be) {
-            final var properties = new Properties();
-            properties.put("version", "?");
-            buildProperties = new BuildProperties(properties);
-        }
-
-        return new ApiInfo(
-                "HMPPS NOMIS API Documentation",
-                "A RESTful API service for accessing HMPPS Custody Information.",
-                buildProperties.getVersion(), "", contactInfo(),
-                "Open Government Licence v3.0", "https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/",
-        Collections.emptyList());
+        return new OAuthBuilder().name("spring_oauth")
+                .grantTypes(List.of(grantType))
+                .scopes(List.of(scopes()))
+                .build();
     }
+
+    private AuthorizationScope[] scopes() {
+        return new AuthorizationScope[]{
+                new AuthorizationScope("read", "for read operations"),
+                new AuthorizationScope("write", "for write operations")
+        };
+    }
+
+    private SecurityContext securityContext() {
+        return SecurityContext.builder()
+                .securityReferences(
+                        List.of(new SecurityReference("spring_oauth", scopes())))
+                .forPaths(PathSelectors.regex("/.*"))
+                .build();
+    }
+
+    private String getVersion() {
+        return buildProperties == null ? "version not available" : buildProperties.getVersion();
+    }
+
 
     private Contact contactInfo() {
         return new Contact(
@@ -75,4 +90,21 @@ public class SwaggerConfig {
                 "",
                 "feedback@digital.justice.gov.uk");
     }
+
+    private ApiInfo apiInfo() {
+        final var vendorExtension = new StringVendorExtension("", "");
+        final Collection<VendorExtension> vendorExtensions = new ArrayList<>();
+        vendorExtensions.add(vendorExtension);
+
+        return new ApiInfo(
+                "HMPPS NOMIS API Documentation",
+                "A RESTful API service for accessing HMPPS Custody Information.",
+                getVersion(),
+                "https://gateway.nomis-api.service.justice.gov.uk/auth/terms",
+                contactInfo(),
+                "Open Government Licence v3.0", "https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/", vendorExtensions);
+    }
+
+
+
 }
